--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: android
 jdk:
 - oraclejdk8
-sudo: false
+#sudo: false
 #dist: precise
 branches:
   only:
@@ -10,8 +10,8 @@ branches:
   - staging
   - hotfix
 before_cache:
-- rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-- rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 cache:
   directories:
   - $HOME/.gradle/caches/
@@ -28,11 +28,11 @@ android:
   - extra-google-google_play_services
   - extra-google-m2repository
 before_script:
-- npm install -g firebase-tools
+  - npm install -g firebase-tools
 script:
-- ./gradlew assembleDebug
+  - ./gradlew assembleDebug
 after_script:
-- firebase deploy --token $FIREBASE_TOKEN --non-interactive
+  - firebase deploy --token $FIREBASE_TOKEN --non-interactive
 before_install:
   - chmod +x gradlew
   - touch ~/.android/repositories.cfg
